--- a/4.linear_models_part2/slides/slideslinearmodelsPart2.Rnw
+++ b/4.linear_models_part2/slides/slideslinearmodelsPart2.Rnw
@@ -18,7 +18,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%% Doc info %%%%%%%%%%%%%%%%%%%
-\title[\textbf{Linear models 2:}]{What on earth is going on with my linear models??!}
+\title[\textbf{Linear models 2:}]{What on earth is going on with my linear models??! Slides with solutions to exercises}
 \date{\today}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -313,6 +313,31 @@ Plot suggests a quadratic relationship
 \end{frame}
 %%%%%%%%%%%%
 
+\begin{frame}[fragile]{Introduction to prediction: solution}
+\textbf{Write mathematically the relationship between obs and predictor}\\
+$$
+\mathrm{obs} = \beta_0 + \beta_1 \mathrm{predictor} + \beta_2 \mathrm{predictor}^2 + \epsilon
+$$
+where the $\beta$ are the coefficients of the linear model, and $\epsilon$ represent residuals.\\
+
+\textbf{Input regression coefficients in there to predict "obs" from "predictor"}
+<< eval=FALSE>>=
+    xx <- seq(from=0, to = 10, length.out = 100)
+  predxx <- coef(m1)[1] + xx * coef(m1)[2] + (xx^2) * coef(m1)[3]
+  @
+  
+  \textbf{Add a prediction line on the plot obs/predictor}
+    << eval=FALSE>>=
+  plot(x=forprediction$predictor, y=forprediction$obs, xlab="predictor", 
+       ylab="obs")
+  lines(x = xx, y=predxx, col="red", lwd=3)
+  @
+
+The fit looks pretty good.
+
+\end{frame}
+%%%%%%%%%%%
+
 \begin{frame}[fragile]{Introduction to prediction}
 
   <<echo=FALSE>>=
@@ -328,11 +353,13 @@ Plot suggests a quadratic relationship
 %%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}
+\begin{frame}{Relaxation slide}
   \begin{center}
     \includegraphics[width=0.5\textwidth]{Figures/brain.jpg}
   \end{center}
+  This is a snow vole, I used to spend time squeezing them in Switzerland. They gave me a diploma for that.
 \end{frame}
+%%%%%%%%%%%
 
 \section{A puzzling but simple problem: Over-fit and collinearity}
 
@@ -362,6 +389,25 @@ write.csv(Cdata, file = "Cdata.csv", row.names = FALSE)
   summary(lm(y ~ x1 + x2, data=cdata))
   summary(lm(y ~ x2 + x3, data=cdata))
 @
+
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Over-fit and collinearity: Solution}
+
+  <<echo=TRUE, eval=FALSE>>=
+  cdata <- read.csv(file = "Cdata.csv")
+  summary(lm(y ~ x1 + x2, data=cdata))
+  summary(lm(y ~ x2 + x3, data=cdata))
+@
+
+One regression gives NA for the second coefficient, the other regression gives ridiculously large estimates and standard errors. In the former case, the two predictors are perfectly correlated and a regression cannot disentangle their respective effects. In the latter case, they are almost perfectly correlated, there is a tiny bit of information about their independent effects, but not enough to get good estimates. See the correlations:
+<<eval=FALSE>>=
+  plot(cdata$x1, cdata$x2)
+  plot(cdata$x2, cdata$x3)
+@
+In both cases you should drop one on the two predictors; they contain the same information.
+The models give logical answers and good predictions, but there is nothing to be learned about the independent effects of the two predictors and therefore the models are not biologically interesting.
 
 \end{frame}
 %%%%%%%%%%%
@@ -517,44 +563,44 @@ Significant positive correlation confirmed, BUT, no biological mechanism, little
 
 \end{frame}
 %%%%%%%%%%%
-
-\begin{frame}[fragile]{Practice lm() with parasites}
-
-<<echo=FALSE, eval=FALSE>>=
-  set.seed(123)
-  ns <- 135
-  x2 <- sample(x = 1:3, size = ns, replace = TRUE)
-  x1 <- rnorm(ns, 0, 1) + c(-1,0,1)[x2]
-  x3 <- rnorm(ns, 5, 0.1)#no effect
-  x4 <- sample(x=0:1, size=ns, replace=TRUE)#unobserved
-  y <- 2 + 0.3*x1 + 0.5*(x2/2)+ x4 + rnorm(ns, sd = 0.7)
-  lamb <- exp(y)
-  obs <- abs(sapply(X = lamb, FUN = function(x) {rpois(n = 1, lambda = x)}) + rnorm(ns, sd=0.5))
-
-para <- data.frame(Parasite_Mass = obs, Individual_Size = x1 +6, Location = c("A","B","C")[x2], Fur_Darkness = x3)
-
-plot(para$Parasite_Mass, x=para$Individual_Size)
-summary(glm(Parasite_Mass ~ Individual_Size + as.factor(Location) + Fur_Darkness, data=para, family="quasipoisson"))
-
-summary(lm(Parasite_Mass ~ Individual_Size, data=para))
-summary(lm(Parasite_Mass ~ Individual_Size+as.factor(Location), data=para))
-hist(resid(lm(Parasite_Mass ~ Individual_Size + as.factor(Location) + Fur_Darkness, data=para)))
-write.csv(x = para, file = "Para.csv", row.names = FALSE)
-@
-  
-  \begin{alertblock}{What explains variation in parasitic load?}
-  You collected ecto-parasites on some furry large mammals at three locations. Parasites break easily when we collect them and are impossible to count, so we decide to measure parasitic load as their mass. \textbf{Why do some mammals have larger parasitic load?} \pause
-    \begin{itemize}
-      \item Load the \texttt{Para.csv} data (don't forget: str(), summary(), plot()\dots)
-      \item Model \verb+Parasite_Mass+ using \texttt{lm()}
-      \item Find what variables predict \verb+Parasite_Mass+
-      \item How good are your models? Assumptions? Prediction?
-      \item What biological interpretation can you imagine?
-      \end{itemize}
-  \end{alertblock}
-  
-\end{frame}
-%%%%%%%%%%%
+% 
+% \begin{frame}[fragile]{Practice lm() with parasites}
+% 
+% <<echo=FALSE, eval=FALSE>>=
+%   set.seed(123)
+%   ns <- 135
+%   x2 <- sample(x = 1:3, size = ns, replace = TRUE)
+%   x1 <- rnorm(ns, 0, 1) + c(-1,0,1)[x2]
+%   x3 <- rnorm(ns, 5, 0.1)#no effect
+%   x4 <- sample(x=0:1, size=ns, replace=TRUE)#unobserved
+%   y <- 2 + 0.3*x1 + 0.5*(x2/2)+ x4 + rnorm(ns, sd = 0.7)
+%   lamb <- exp(y)
+%   obs <- abs(sapply(X = lamb, FUN = function(x) {rpois(n = 1, lambda = x)}) + rnorm(ns, sd=0.5))
+% 
+% para <- data.frame(Parasite_Mass = obs, Individual_Size = x1 +6, Location = c("A","B","C")[x2], Fur_Darkness = x3)
+% 
+% plot(para$Parasite_Mass, x=para$Individual_Size)
+% summary(glm(Parasite_Mass ~ Individual_Size + as.factor(Location) + Fur_Darkness, data=para, family="quasipoisson"))
+% 
+% summary(lm(Parasite_Mass ~ Individual_Size, data=para))
+% summary(lm(Parasite_Mass ~ Individual_Size+as.factor(Location), data=para))
+% hist(resid(lm(Parasite_Mass ~ Individual_Size + as.factor(Location) + Fur_Darkness, data=para)))
+% write.csv(x = para, file = "Para.csv", row.names = FALSE)
+% @
+%   
+%   \begin{alertblock}{What explains variation in parasitic load?}
+%   You collected ecto-parasites on some furry large mammals at three locations. Parasites break easily when we collect them and are impossible to count, so we decide to measure parasitic load as their mass. \textbf{Why do some mammals have larger parasitic load?} \pause
+%     \begin{itemize}
+%       \item Load the \texttt{Para.csv} data (don't forget: str(), summary(), plot()\dots)
+%       \item Model \verb+Parasite_Mass+ using \texttt{lm()}
+%       \item Find what variables predict \verb+Parasite_Mass+
+%       \item How good are your models? Assumptions? Prediction?
+%       \item What biological interpretation can you imagine?
+%       \end{itemize}
+%   \end{alertblock}
+%   
+% \end{frame}
+% %%%%%%%%%%%
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -588,11 +634,6 @@ Not necessarily wrong, but typical interpretation assumes:
 \end{frame}
 %%%%%%%%%%%
 
-\section{If time permits: multiple regression}
-
-\begin{frame}{Improvisation}
-
-\end{frame}
 %%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
