--- a/05.tidy-data-1/slides.Rmd
+++ b/05.tidy-data-1/slides.Rmd
@@ -7,7 +7,9 @@ output: ioslides_presentation
 
 ```{r setup, include=FALSE}
 library(tidyverse)
+library(ggplot2)
 dir.exists("data") || dir.create("data")
+theme_set(theme_bw())
 ```
 
 ```{r include=F}
@@ -19,7 +21,8 @@ ghg = expand.grid(year=seq(1970, 2010, 1),
                    as.numeric(site) * -25 +
                      rnorm(year, 0, 4))
     )
-
+write_csv(ghg, "data/ghg.csv")
+write_tsv(ghg, "data/ghg.tsv")
 plot(co2ppm~year, data=ghg)
 ghg.s = ghg %>%
     spread(site, co2ppm)
@@ -30,7 +33,7 @@ ghg.y = ghg %>%
 
 ## Data organisation
 
-- Any dataset can be represented many ways
+- Any data set can be represented many ways
 
 ```{r echo=F}
 head(ghg, 3)
@@ -66,7 +69,7 @@ head(ghg)
 - A variable can be
   - A dimension (e.g. year, species, site)
   - The kind of measurement (e.g. DBH, height)
-- In the case of our GHG dataset?
+- In the case of our GHG data set?
 
 ```{r}
 head(ghg)
@@ -74,8 +77,8 @@ head(ghg)
   
 ## Context dependence
 
-- The tidiest form of a dataset is context dependent
-- What if `ghg` had column with temerature?
+- The tidiest form of a data set is context dependent
+- What if `ghg` had column with temperature?
 
 ```{r include=F}
 ghg.temp = ghg %>% 
@@ -106,7 +109,7 @@ I *highly* recommend reading the tidy data paper. Searching for "Hadley Wickham 
 
 - Base R doesn't have everything
 - "Extra" bits are distributed as *packages*
-  - Distibution of code, documentation, sometimes data
+  - Distribution of code, documentation, sometimes data
   - E.g. `ggplot2`, `lmer`, `adegenet`
 - Written by anyone, nearly always open source
 
@@ -114,7 +117,7 @@ I *highly* recommend reading the tidy data paper. Searching for "Hadley Wickham 
 
 - Normally, with `install.packages()`
 - Downloads package and dependencies
-- On linux, will be source, which might need compiling
+- On Linux, will be source, which might need compiling
   - Sometimes an `apt-get` of a C/C++ library is needed
 - On OS X/Windows, normally precompiled
 - Extracts and installs, checks if loadable
@@ -130,7 +133,7 @@ install.packages(c("ggplot2", "dplyr"))
 
 - Comprehensive R Archive Network
   - The (main) place R packages live
-  - Search here (via google, preferably) to find
+  - Search here (via Google, preferably) to find
   - Also hosts documentation
 - Akin to PyPI, Debian's apt, CPAN
 - Nearly all stable, general purpose packages here
@@ -200,8 +203,8 @@ gather(ghg.s, "site", "co2", -year)
 ## Tidyverse documentation
 
 - The tidyverse website (<tidyverse.org>) has great docs
-- Most of today is based on the excelent `vignette("tidy-data")` and `vignette("dplyr")`
-- Hadley Wickham's "R for Data Sciences" book highly recommened (<r4ds.had.co.nz>)
+- Most of today is based on the excellent `vignette("tidy-data")` and `vignette("dplyr")`
+- Hadley Wickham's "R for Data Sciences" book highly recommend (<r4ds.had.co.nz>)
 
 ```{r echo=F,out.height="320px",fig.align="center"}
 knitr::include_graphics("http://r4ds.had.co.nz/cover.png")
@@ -248,7 +251,7 @@ con = expand.grid(map=c("BWA", "NGM", "Bowtie"),
 ```
 
 - `separate()`: split by token (e.g. space, _, /)
-- `extract()`: extract matches in pattern (regex)
+- `extract()`: extract matches in pattern (regexp)
   - Useful if not delimited
 ```{r}
 str(con)
@@ -262,7 +265,7 @@ str(separate(con, bam, into=c("mapper", "sample")))
 ## First, some grammar: Pipes
 
 - A way of defining *data flow*
-- In unix, `|` (e.g. `cat haystack barn | grep needle`)
+- In UNIX, `|` (e.g. `cat haystack barn | grep needle`)
 - Gives output of LHS to RHS as input
 - Makes code read in execution order
 
@@ -346,12 +349,52 @@ group_by(mpg2, manufacturer) %>%
   - Add a column with `mutate()`
   - Subset the data with `filter()`
   - Sort it with `arrange()`
-- Use the `mpg` dataset if you do not have your own.
+- Use the `mpg` data set if you do not have your own.
 
 ```{r eval=F}
 vignette("dplyr")
 ```
 
-## TO BE ADDED
-- `readr`'s `read_tsv/csv/delim`
-- `purrr` for split modeling? [(see here)](https://github.com/tidyverse/purrr#usage)
+# More Tidyverse
+
+We will cover these next time
+
+## `ggplot2`
+
+- A grammar for graphics
+  - Very nice, flexible graphics
+  - Designed to work on tidy data
+
+```{r fig.align="center", fig.width=6, fig.height=3}
+ggplot(ghg, aes(x=year, y=co2ppm)) +
+  geom_point(aes(colour=site))
+```
+
+
+## `readr`
+
+- New tools for reading tabular data
+  - Faster
+  - Saner defaults
+  - Better control of column types
+
+```{r eval=F}
+df = read_csv("data/ghg.csv")
+# OR, if tab separated
+df = read_tsv("data/ghg.tsv")
+```
+
+## `purrr`
+
+- Tools for functional programming
+  - Not everything can be done with `dplyr`
+  - `purr` helps tidyverse-ify hand-written code
+  
+```{r}
+# Run independent lm per data split by cylinder
+mtcars %>%
+  split(.$cyl) %>% # Split by cyl
+  map(~ lm(mpg ~ wt, data = .)) %>% # run an lm call within cyl class
+  map(summary) %>% # take summary of lm object
+  map_dbl("r.squared") # extract the r2 as a vector across the 3 classes
+```
