--- a/06.multiple_regression/slides/slideslinearmodelsPart3.tex
+++ b/06.multiple_regression/slides/slideslinearmodelsPart3.tex
@@ -169,29 +169,9 @@
 \begin{alltt}
   \hlkwd{summary}\hlstd{(}\hlkwd{lm}\hlstd{(y}\hlopt{~} \hlnum{1} \hlopt{+} \hlstd{a}\hlopt{*}\hlstd{b))}
 \end{alltt}
-\begin{verbatim}
 
-Call:
-lm(formula = y ~ 1 + a * b)
 
-Residuals:
-    Min      1Q  Median      3Q     Max 
--1.8719 -0.6777 -0.1086  0.5897  2.3166 
-
-Coefficients:
-            Estimate Std. Error t value Pr(>|t|)    
-(Intercept)  1.14098    0.09578  11.913  < 2e-16 ***
-a           -0.39281    0.10834  -3.626 0.000463 ***
-b            0.53434    0.09881   5.408 4.67e-07 ***
-a:b          0.35911    0.11449   3.137 0.002270 ** 
----
-Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
-
-Residual standard error: 0.9468 on 96 degrees of freedom
-Multiple R-squared:  0.3873,	Adjusted R-squared:  0.3682 
-F-statistic: 20.23 on 3 and 96 DF,  p-value: 3.045e-10
-\end{verbatim}
-\end{kframe}
+{\ttfamily\noindent\bfseries\color{errorcolor}{Error in model.frame.default(formula = y \textasciitilde{} 1 + a * b, drop.unused.levels = TRUE): variable lengths differ (found for 'a')}}\end{kframe}
 \end{knitrout}
 \end{frame}
 %%%%%%%%%%%
@@ -204,6 +184,59 @@ F-statistic: 20.23 on 3 and 96 DF,  p-value: 3.045e-10
   \end{alertblock}
 
 
+
+
+
+  \begin{alertblock}{Exercise}
+    \begin{enumerate}
+      \item Load the data masssex.csv
+      \item Fit a simple regression explaining movement by mass for each sex separately. Is the relationship different between sexes?
+      \item Fit the multiple regression explaining movement by mass, sex, and mass:sex, using the full dataset. Is the relationship different between sexes?
+      \item Try to understand the discreapancy by plotting the data
+    \end{enumerate}
+  \end{alertblock}
+
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Warnings}
+1.
+\begin{knitrout}\small
+\definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+  \hlstd{masssex} \hlkwb{<-} \hlkwd{read.csv}\hlstd{(}\hlkwc{file}\hlstd{=}\hlstr{"masssex.csv"}\hlstd{)}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\pause
+2.
+\begin{knitrout}\small
+\definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+  \hlkwd{summary}\hlstd{(}\hlkwd{lm}\hlstd{(movement} \hlopt{~} \hlstd{mass,} \hlkwc{data}\hlstd{=masssex[masssex}\hlopt{$}\hlstd{sex}\hlopt{==}\hlnum{0}\hlstd{,]))}
+  \hlkwd{summary}\hlstd{(}\hlkwd{lm}\hlstd{(movement} \hlopt{~} \hlstd{mass,} \hlkwc{data}\hlstd{=masssex[masssex}\hlopt{$}\hlstd{sex}\hlopt{==}\hlnum{1}\hlstd{,]))}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\pause
+3.
+\begin{knitrout}\small
+\definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+  \hlkwd{summary}\hlstd{(}\hlkwd{lm}\hlstd{(movement} \hlopt{~} \hlstd{mass}\hlopt{*}\hlstd{sex,} \hlkwc{data}\hlstd{=masssex))}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{Warnings}
+4.
+\begin{knitrout}\small
+\definecolor{shadecolor}{rgb}{0.843, 0.867, 0.922}\color{fgcolor}
+\includegraphics[width=0.9\textwidth,height=0.9\textheight]{figure/intersexbehav-1} 
+
+\end{knitrout}
 \end{frame}
 %%%%%%%%%%%
 
